Giraph Change Log

Release 0.2.0 - unreleased
  GIRAPH-382: ZooKeeperExt should handle ConnectionLossException by
  retrying. (aching)

  GIRAPH-381: Ensure we get the original exception from
  GraphMapper#run(). (aching)

  GIRAPH-379: HiveGiraphRunner should have a skipOutput option for
  testing (aching)

  GIRAPH-380: Hadoop_non_secure is broken (majakabiljo)

  GIRAPH-372: Write worker addresses to Zookeeper; 
  move addresses and resolution to NettyClient (majakabiljo)

  GIRAPH-373: RandomMessageBenchmark is broken (majakabiljo).

  GIRAPH-374: Multithreading in input split loading and compute (aching).

  GIRAPH-375: Cleaner MutableVertex API (apresta)

  GIRAPH-371: Replace BspUtils in giraph-formats-contrib for
  speed. (aching)

  GIRAPH-369: bin/giraph broken (Nitay Joffe via ereisman)

  GIRAPH-368: HBase Vertex I/O formats handle setConf() internally
  (bfem via ereisman)

  GIRAPH-367: Expose WorkerInfo to clients (Nitay Joffe via ereisman)

  GIRAPH-370: AccumuloVertexOutputFormat public visibility for
  TABLE_NAME. (bfem via aching)

  GIRAPH-366: TestGraphPartitioner should use getTempPath() everywhere

  GIRAPH-346: Top Level POM. (nitay via aching)

  GIRAPH-200: Remove hadoop RPC and keep just netty. (apresta)

  GIRAPH-363: Fix hadoop_0.23 profile broken by GIRAPH-211 (ekoontz)

  GIRAPH-211: Add secure authentication to Netty IPC (ekoontz)

  GIRAPH-361: Hive output partition parsing is broken (nitay via apresta)

  GIRAPH-360: Keep track of the task id in ChannelRotater to send
  requests without knowing the worker id upfront (aching via
  ekoontz)

  GIRAPH-307: InputSplit list can be long with many workers 
  (and locality info) and should not be re-created every time a 
  worker calls reserveInputSplit() (ereisman via majakabiljo)

  GIRAPH-358: Rename package format->io in giraph-formats-contrib for
  consistency with main package. (apresta via aching)

  GIRAPH-350: HBaseVertex i/o formats are not being injected with